--- a/NetworkChatServer/pom.xml
+++ b/NetworkChatServer/pom.xml
@@ -18,5 +18,11 @@
             <artifactId>sqlite-jdbc</artifactId>
             <version>3.36.0.3</version>
         </dependency>
+        <dependency>
+            <groupId>groupId</groupId>
+            <artifactId>NetworkChatClientServer</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
